...
                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp">

                                <EditText
                                    android:id="@+id/et_Name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="Name"
                                    android:inputType="text"
                                    android:maxLines="1"
                                    android:padding="10dp" />
...
                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp">

                                <EditText
                                    android:id="@+id/et_Description"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="Description"
                                    android:inputType="text"
                                    android:maxLines="1"
                                    android:padding="10dp" />
...
                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp">

                                <EditText
                                    android:id="@+id/et_Ailment"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="Ailment"
                                    android:inputType="text"
                                    android:maxLines="1"
                                    android:padding="10dp" />
...
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/lin_StartDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <ImageView
...
                                        android:text="Start Date"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                                </android.support.design.widget.TextInputLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/lin_StartTime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <ImageView
...
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/lin_EndDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <ImageView
...
                                        android:text="End Date"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                                </android.support.design.widget.TextInputLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/lin_endTime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <ImageView
...
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Once a day" />

                            <RadioButton
                                android:id="@+id/rb_twice"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Twice a day" />

                            <RadioButton
                                android:id="@+id/rb_thrice"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
...

                        </RadioGroup>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_Submit"
                    style="@style/AppTheme.RoundedCornerMaterialButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="Submit"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
...
