...
                                android:text="Name: "
                                android:maxLines="1"
                                android:padding="10dp"
                                android:textStyle="bold"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                            <TextView
                                android:id="@+id/tv_Name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Name"
                                android:gravity="end"
                                android:maxLines="1"
                                android:padding="10dp"
...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <android.support.v7.widget.AppCompatButton
                        android:layout_weight="1"
                        android:id="@+id/btn_Edit"
                        android:text="Edit"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@android:color/white"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        />
                    <android.support.v7.widget.AppCompatButton
                        android:layout_weight="1"
                        android:id="@+id/btn_Confirm"
                        android:text="Confirm"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:backgroundTint="@color/colorPrimary"
...
